Changelog
=========

2.3 - Unreleased
----------------


2.2 - April 16, 2009
--------------------

- Use the mimetypes_registry tool to find the content-type of a file,
  only falling back to the system mimetype registry if the tool can
  not identify the file.
  [wichert]
 
- Set the Content-Type header correctly for file downloads.
  [wichert]


2.1 - August 5, 2008
--------------------

- Return an empty list instead of raising an exception which triggers a
  site error when accessing a reflector which tries to use a path which does
  not exist on the filesystem. The old behaviour was non-intuitive for users
  and made migrating sites extremely hard.
  [wichert]

- Update TextIndexNG3 support code to include the Title (ie the filename) of an
  object in SearchableText.
  [wichert]

- Make Reflecto an ATCT content types to make it integrate better with
  Plone. This was triggered by Reflecto instances inheriting the excludeFromNav
  data from their parent which made them not appear in the site navigation 
  for mysterious reasons.
  [wichert]

- Fix Last-Modified header format.
  [elro]

- Add webdav support.
  [elro]

- Lowercase filenames before looking up the mime-type. This fixes incorrect
  mime-types for uppercase filenames.
  [wichert]

- Remove the properties alias from the Reflector type. This is obsolete
  in Plone 3.x.
  [wichert]

- Add CSRF authenticator to the folder_contents page. This means Reflecto now
  requires Plone 3.1, or Plone 3.0 with the CSRF hotfix. This fixes
  http://plone.org/products/reflecto/issues/30 .
  [wichert]


2.0 (Released 2008/05/14)
-------------------------

- Use the correct title for the folder_contents buttons.
  [wichert]

- Add support for downloading folders as zip files.
  [wichert]

- If CacheSetup is installed allow users to tweak cache rules for individual
  Reflector instances.
  [wichert]

- Prevent CR/LF conversion when uploading files on Windows. This fixes